[gd_scene load_steps=2 format=3 uid="uid://settings_menu_001"]

[ext_resource type="Script" path="res://ui/SettingsMenu.gd" id="1"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="Space1" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="AudioLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Audio"

[node name="HSeparator1" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="VoiceSettings" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="RangeLabel" type="Label" parent="Panel/VBox/VoiceSettings"]
layout_mode = 2
text = "Voice Range: 20.0 m"

[node name="RangeSlider" type="HSlider" parent="Panel/VBox/VoiceSettings"]
layout_mode = 2
min_value = 10.0
max_value = 50.0
value = 20.0

[node name="VolumeLabel" type="Label" parent="Panel/VBox/VoiceSettings"]
layout_mode = 2
text = "Voice Volume: 1.00"

[node name="VolumeSlider" type="HSlider" parent="Panel/VBox/VoiceSettings"]
layout_mode = 2
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Space2" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GraphicsLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Graphics"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="QualityOption" type="OptionButton" parent="Panel/VBox"]
layout_mode = 2
text = "Graphics Quality"

[node name="Space3" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Back"

